feat(fetch): admin get all accounts
- fetch all accounts from the database and display it on a new page

[Delivers #165908405]

--- a/UI/account-transactions.html
+++ b/UI/account-transactions.html
@@ -11,8 +11,8 @@
   <body>
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-      <a class="nav-link" href="./index.html"><p>home</p></a>
-      <a class="nav-link" href="./staff.html"><p>Dashboard</p></a>
+      <a class="nav-link" href="./index.html"><p>log out</p></a>
+      <a class="nav-link" href="./admin.html"><p>Dashboard</p></a>
     </div>
     <div id="page">
       <header>
@@ -20,319 +20,21 @@
           <p class="logo">b<span>ank</span>a</p>
         </div>
         <div class="header-links">
-          <a class="nav-link" href="./index.html"><p>home</p></a>
-          <a class="nav-link" href="./staff.html"><p>Dashboard</p></a>
+          <a class="nav-link" href="./index.html"><p>log out</p></a>
+          <a class="nav-link" href="./admin.html"><p>Dashboard</p></a>
         </div>
         <div id="hamburger-menu">☰</div>
       </header>
       <div class="page-body staff">
-        <div>
-          <div><button id="transaction" class="transaction">New Transaction</button></div>
-          <div class="accounts">
-            <span class="balance">NGN 125,000.47</span>
-            <div class="">
-              <div class="account-details">
-                <span class="item-label">Account Holder:</span>
-                <span class="item-content">Mr. Kelechi M. Ngwobia</span>
-                <span class="item-label">Account Number:</span>
-                <span class="item-content">0023521878</span>
-                <span class="item-label">Account Type:</span>
-                <span class="item-content">Savings</span>
-                <span class="item-label">Account Status:</span>
-                <span class="item-content active">Active</span>
-              </div>
-            </div>
-            <div class="account-operations">
-              <button class="delete">Delete</button>
-              <button class="details" onclick="location.href='account-details.html'">Details</button>
-            </div>
+          <div class="errors">
+              <ul>
+                  
+              </ul>
           </div>
-          <div class="accounts">
-            <span class="balance">NGN 425,000.54</span>
-            <div class="">
-              <div class="account-details">
-                <span class="item-label">Account Holder:</span>
-                <span class="item-content">Ms. Chinecherem Ndukwe</span>
-                <span class="item-label">Account Number:</span>
-                <span class="item-content">0024156987</span>
-                <span class="item-label">Account Type:</span>
-                <span class="item-content">Current</span>
-                <span class="item-label">Account Status:</span>
-                <span class="item-content active">Active</span>
-              </div>
-            </div>
-            <div class="account-operations">
-              <button class="delete">Delete</button>
-              <button class="details" onclick="location.href='account-details.html'">Details</button>
-            </div>
-          </div>
-          <div class="accounts">
-            <span class="balance">NGN 55,000</span>
-            <div class="">
-              <div class="account-details">
-                <span class="item-label">Account Holder:</span>
-                <span class="item-content">Ms. Iyabo Adekunle</span>
-                <span class="item-label">Account Number:</span>
-                <span class="item-content">0524796425</span>
-                <span class="item-label">Account Type:</span>
-                <span class="item-content">Current</span>
-                <span class="item-label">Account Status:</span>
-                <span class="item-content dormant">Dormant</span>
-              </div>
-            </div>
-            <div class="account-operations">
-              <button class="delete">Delete</button>
-              <button class="details" onclick="location.href='account-details.html'">Details</button>
-            </div>
-          </div>
-          <div class="accounts">
-            <span class="balance">NGN 2,350,000.57</span>
-            <div class="">
-              <div class="account-details">
-                <span class="item-label">Account Holder:</span>
-                <span class="item-content">Mr. Abdulmalik Abdulfatai</span>
-                <span class="item-label">Account Number:</span>
-                <span class="item-content">7855830254</span>
-                <span class="item-label">Account Type:</span>
-                <span class="item-content">Savings</span>
-                <span class="item-label">Account Status:</span>
-                <span class="item-content active">Active</span>
-              </div>
-            </div>
-            <div class="account-operations">
-              <button class="delete">Delete</button>
-              <button class="details" onclick="location.href='account-details.html'">Details</button>
-            </div>
-          </div>
-          <div class="accounts">
-            <span class="balance">NGN 0.62</span>
-            <div class="">
-              <div class="account-details">
-                <span class="item-label">Account Holder:</span>
-                <span class="item-content">Mr. James Ogheneorieva</span>
-                <span class="item-label">Account Number:</span>
-                <span class="item-content">0745823615</span>
-                <span class="item-label">Account Type:</span>
-                <span class="item-content">Savings</span>
-                <span class="item-label">Account Status:</span>
-                <span class="item-content dormant">Dormant</span>
-              </div>
-            </div>
-            <div class="account-operations">
-              <button class="delete">Delete</button>
-              <button class="details" onclick="location.href='account-details.html'">Details</button>
-            </div>
-          </div>
-          <div class="accounts">
-            <span class="balance">NGN 25,032.72</span>
-            <div class="">
-              <div class="account-details">
-                <span class="item-label">Account Holder:</span>
-                <span class="item-content">Mr. Abobi Prines</span>
-                <span class="item-label">Account Number:</span>
-                <span class="item-content">4545258742</span>
-                <span class="item-label">Account Type:</span>
-                <span class="item-content">Savings</span>
-                <span class="item-label">Account Status:</span>
-                <span class="item-content dormant">Dormant</span>
-              </div>
-            </div>
-            <div class="account-operations">
-              <button class="delete">Delete</button>
-              <button class="details" onclick="location.href='account-details.html'">Details</button>
-            </div>
-          </div>
-          <div class="accounts">
-            <span class="balance">NGN 0.62</span>
-            <div class="">
-              <div class="account-details">
-                <span class="item-label">Account Holder:</span>
-                <span class="item-content">Mr. James Ogheneorieva</span>
-                <span class="item-label">Account Number:</span>
-                <span class="item-content">0745823615</span>
-                <span class="item-label">Account Type:</span>
-                <span class="item-content">Savings</span>
-                <span class="item-label">Account Status:</span>
-                <span class="item-content dormant">Dormant</span>
-              </div>
-            </div>
-            <div class="account-operations">
-              <button class="delete">Delete</button>
-              <button class="details" onclick="location.href='account-details.html'">Details</button>
-            </div>
-          </div>
-          <div class="accounts">
-            <span class="balance">NGN 0.62</span>
-            <div class="">
-              <div class="account-details">
-                <span class="item-label">Account Holder:</span>
-                <span class="item-content">Mr. James Ogheneorieva</span>
-                <span class="item-label">Account Number:</span>
-                <span class="item-content">0745823615</span>
-                <span class="item-label">Account Type:</span>
-                <span class="item-content">Savings</span>
-                <span class="item-label">Account Status:</span>
-                <span class="item-content dormant">Dormant</span>
-              </div>
-            </div>
-            <div class="account-operations">
-              <button class="delete">Delete</button>
-              <button class="details" onclick="location.href='account-details.html'">Details</button>
-            </div>
-          </div>
-          <div class="accounts">
-            <span class="balance">NGN 0.62</span>
-            <div class="">
-              <div class="account-details">
-                <span class="item-label">Account Holder:</span>
-                <span class="item-content">Mr. James Ogheneorieva</span>
-                <span class="item-label">Account Number:</span>
-                <span class="item-content">0745823615</span>
-                <span class="item-label">Account Type:</span>
-                <span class="item-content">Savings</span>
-                <span class="item-label">Account Status:</span>
-                <span class="item-content dormant">Dormant</span>
-              </div>
-            </div>
-            <div class="account-operations">
-              <button class="delete">Delete</button>
-              <button class="details" onclick="location.href='account-details.html'">Details</button>
-            </div>
-          </div>
-          <div class="accounts">
-            <span class="balance">NGN 0.62</span>
-            <div class="">
-              <div class="account-details">
-                <span class="item-label">Account Holder:</span>
-                <span class="item-content">Mr. James Ogheneorieva</span>
-                <span class="item-label">Account Number:</span>
-                <span class="item-content">0745823615</span>
-                <span class="item-label">Account Type:</span>
-                <span class="item-content">Savings</span>
-                <span class="item-label">Account Status:</span>
-                <span class="item-content dormant">Dormant</span>
-              </div>
-            </div>
-            <div class="account-operations">
-              <button class="delete">Delete</button>
-              <button class="details" onclick="location.href='account-details.html'">Details</button>
-            </div>
-          </div>
-          <div class="accounts">
-            <span class="balance">NGN 0.62</span>
-            <div class="">
-              <div class="account-details">
-                <span class="item-label">Account Holder:</span>
-                <span class="item-content">Mr. James Ogheneorieva</span>
-                <span class="item-label">Account Number:</span>
-                <span class="item-content">0745823615</span>
-                <span class="item-label">Account Type:</span>
-                <span class="item-content">Savings</span>
-                <span class="item-label">Account Status:</span>
-                <span class="item-content dormant">Dormant</span>
-              </div>
-            </div>
-            <div class="account-operations">
-              <button class="delete">Delete</button>
-              <button class="details" onclick="location.href='account-details.html'">Details</button>
-            </div>
-          </div>
-          <div class="accounts">
-            <span class="balance">NGN 0.62</span>
-            <div class="">
-              <div class="account-details">
-                <span class="item-label">Account Holder:</span>
-                <span class="item-content">Mr. James Ogheneorieva</span>
-                <span class="item-label">Account Number:</span>
-                <span class="item-content">0745823615</span>
-                <span class="item-label">Account Type:</span>
-                <span class="item-content">Savings</span>
-                <span class="item-label">Account Status:</span>
-                <span class="item-content dormant">Dormant</span>
-              </div>
-            </div>
-            <div class="account-operations">
-              <button class="delete">Delete</button>
-              <button class="details" onclick="location.href='account-details.html'">Details</button>
-            </div>
-          </div>
-          <div class="accounts">
-            <span class="balance">NGN 0.62</span>
-            <div class="">
-              <div class="account-details">
-                <span class="item-label">Account Holder:</span>
-                <span class="item-content">Mr. James Ogheneorieva</span>
-                <span class="item-label">Account Number:</span>
-                <span class="item-content">0745823615</span>
-                <span class="item-label">Account Type:</span>
-                <span class="item-content">Savings</span>
-                <span class="item-label">Account Status:</span>
-                <span class="item-content dormant">Dormant</span>
-              </div>
-            </div>
-            <div class="account-operations">
-              <button class="delete">Delete</button>
-              <button class="details" onclick="location.href='account-details.html'">Details</button>
-            </div>
-          </div>
-          <div class="accounts">
-            <span class="balance">NGN 0.62</span>
-            <div class="">
-              <div class="account-details">
-                <span class="item-label">Account Holder:</span>
-                <span class="item-content">Mr. James Ogheneorieva</span>
-                <span class="item-label">Account Number:</span>
-                <span class="item-content">0745823615</span>
-                <span class="item-label">Account Type:</span>
-                <span class="item-content">Savings</span>
-                <span class="item-label">Account Status:</span>
-                <span class="item-content dormant">Dormant</span>
-              </div>
-            </div>
-            <div class="account-operations">
-              <button class="delete">Delete</button>
-              <button class="details" onclick="location.href='account-details.html'">Details</button>
-            </div>
-          </div>
-          <div class="accounts">
-            <span class="balance">NGN 0.62</span>
-            <div class="">
-              <div class="account-details">
-                <span class="item-label">Account Holder:</span>
-                <span class="item-content">Mr. James Ogheneorieva</span>
-                <span class="item-label">Account Number:</span>
-                <span class="item-content">0745823615</span>
-                <span class="item-label">Account Type:</span>
-                <span class="item-content">Savings</span>
-                <span class="item-label">Account Status:</span>
-                <span class="item-content dormant">Dormant</span>
-              </div>
-            </div>
-            <div class="account-operations">
-              <button class="delete">Delete</button>
-              <button class="details" onclick="location.href='account-details.html'">Details</button>
-            </div>
-          </div>
-          <div class="accounts">
-            <span class="balance">NGN 0.62</span>
-            <div class="">
-              <div class="account-details">
-                <span class="item-label">Account Holder:</span>
-                <span class="item-content">Mr. James Ogheneorieva</span>
-                <span class="item-label">Account Number:</span>
-                <span class="item-content">0745823615</span>
-                <span class="item-label">Account Type:</span>
-                <span class="item-content">Savings</span>
-                <span class="item-label">Account Status:</span>
-                <span class="item-content dormant">Dormant</span>
-              </div>
-            </div>
-            <div class="account-operations">
-              <button class="delete">Delete</button>
-              <button class="details" onclick="location.href='account-details.html'">Details</button>
-            </div>
-          </div>
+        <div id="all-accounts">
+          <div><button id="transaction" class="transaction" onclick="transact()">New Transaction</button></div>
         </div>
+        <div class="mini-loader-container" style="margin-top: 100px;"><div class="mini-loader"></div></div>
       </div>
       <div id="myModal" class="modal">
         <div class="modal-content">
@@ -353,7 +55,7 @@
                 <option value="debit">Debit</option>
               </select> 
             </div>
-            <button id="confirm" class="submit-btn">Confirm Transaction</button>
+            <button id="confirm" class="submit-btn" type="submit">Confirm Transaction</button>
           </form>
         </div>
       </div>
@@ -371,5 +73,6 @@
     </div>
     <script src="js/main.js"></script>
     <script src="js/transactions.js"></script>
+    <script src="js/accounts.js"></script>
   </body>
 </html>
