--- a/UI/admin.html
+++ b/UI/admin.html
@@ -61,7 +61,7 @@
         <div id="user-accounts-tab" class="tabcontent">
           <div class="admin-item">
             <span id="superuser" class="item-content"><button class="admin-btn" onclick="location.href='superuser.html'">Create Admin or Staff user Accounts</button></span>
-            <span class="item-content"><button class="admin-btn" onclick="location.href='accounts.html'">View all Bank Accounts</button></span>
+            <span class="item-content"><button class="admin-btn" onclick="location.href='account-transactions.html'">View all Bank Accounts</button></span>
             <span class="item-content"><button class="admin-btn" onclick="location.href='user-accounts.html'">View all User Accounts</button></span>
           </div>
         </div>
