feat(fetch): activate delete button
- work on delete button to delete accounts from the database
- add a confirm modal to warn admin before deleting

[Delivers #165945043]

--- a/UI/account-transactions.html
+++ b/UI/account-transactions.html
@@ -62,7 +62,7 @@
       <div id="warn-modal" class="modal">
         <div id="warning-container" class="modal-content">
           <span class="close" onclick="document.getElementById('warn-modal').style.display = 'none'">&times;</span>
-          <p id="warning">Are you sure you want to delete the account? This can not be undone</p>
+          <p id="warning">Are you sure you want to delete this account? This can not be undone</p>
           <button id="del-confirm" class="submit-btn danger">Delete</button>
           <button id="cancel" class="submit-btn">Cancel</button>
         </div>
