--- a/UI/account-transactions.html
+++ b/UI/account-transactions.html
@@ -37,20 +37,25 @@
         <div class="mini-loader-container" style="margin-top: 100px;"><div class="mini-loader"></div></div>
       </div>
       <div id="myModal" class="modal">
-        <div class="modal-content">
+        <div id="transaction-modal" class="modal-content">
           <span class="close">&times;</span>
-          <form action="" method="">
+          <div class="modal-errors">
+            <ul>
+                
+            </ul>
+          </div>
+          <form id="transact" action="" method="">
             <div class="form-segment">
               <div class="form-label"><label>Account Number</label></div>
-              <input class="form-input" type="number" name="account-number" placeholder="Enter Account Number">
+              <input id="account-number" class="form-input" type="number" required name="account-number" placeholder="Enter Account Number">
             </div>
             <div class="form-segment">
               <div class="form-label"><label>Amount</label></div>
-              <input class="form-input" type="number" name="amount" min="500" value="500" placeholder="Enter Transaction Amount">
+              <input id="amount" class="form-input" type="number" required name="amount" min="500" value="500" placeholder="Enter Transaction Amount">
             </div>
             <div class="form-segment">
               <div class="form-label"><label>Transaction type</label></div>
-              <select class="form-input">
+              <select id="type" required class="form-input">
                 <option value="credit">Credit</option>
                 <option value="debit">Debit</option>
               </select> 
